...
                android:gravity="center_horizontal"
                android:text="@string/AA0571"
                android:textColor="@color/black_90"
                android:textSize="@dimen/sp_14" />

            <Button
                android:id="@+id/add_btn"
                style="@style/fullWidthButton.AppCompat"
                android:layout_width="@dimen/dp_192"
                android:layout_height="@dimen/dp_44"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_38"
                android:layout_marginBottom="@dimen/dp_68"
                android:paddingHorizontal="@dimen/dp_16"
                android:stateListAnimator="@null"
                android:text="@string/AA0049"
                android:textAllCaps="false"
                android:textColor="@color/white_100" />
        </LinearLayout>

    </LinearLayout>

...
