...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_154"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_shared"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_0"
                android:paddingEnd="@dimen/dp_15">
...
                android:layout_height="0.5dp"
                android:layout_marginStart="@dimen/dp_48"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@color/black_10" />

            <LinearLayout
                android:id="@+id/ll_delete"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_0"
                android:paddingEnd="@dimen/dp_15">
...
