<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/device_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_7_5"
            android:tag="recycler_view"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/family_item_device_list"
            tools:itemCount="10"
            app:spanCount="2" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
