<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/menu_frame"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintBottom_toTopOf="@id/nav_btn_menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_btn_menu"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_56"
            android:background="@color/white_100"
            android:stateListAnimator="@null"
            app:itemBackground="@color/white_100"
            app:itemIconSize="@dimen/dp_24"
            app:itemTextAppearanceActive="@style/main_nav_text_active_style"
            app:itemTextAppearanceInactive="@style/main_nav_text_active_style"
            app:itemTextColor="@color/selector_main_navi_text_color"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/app_bottom_nav_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>



